<resources>

    <string name="app_name">bartybart</string>
    <string name="hello_world">Get BART Times!</string>
    <string name="title">Trip Planner</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_barty_bart_main">BartyBartMain</string>
    <string name="title_activity_show_trips">ShowTrips</string>
    <string name="time">Time: </string>
    <string name="date">Date: </string>
    <string name="origin">From:</string>
    <string name="dest">To:</string>

    <string-array name="stations">
        <item>12th St. Oakland City Center</item>
        <item>16th St. Mission</item>
        <item>19th St. Oakland</item>
        <item>24th St. Mission</item>
        <item>Ashby</item>
        <item>Balboa Park</item>
        <item>Bay Fair</item>
        <item>Castro Valley</item>
        <item>Civic Center/UN Plaza</item>
        <item>Coliseum/Oakland Airport</item>
        <item>Colma</item>
        <item>Concord</item>
        <item>Daly City</item>
        <item>Downtown Berkeley</item>
        <item>Dublin/Pleasanton</item>
        <item>El Cerrito del Norte</item>
        <item>El Cerrito Plaza</item>
        <item>Embarcadero</item>
        <item>Fremont</item>
        <item>Fruitvale</item>
        <item>Glen Park</item>
        <item>Hayward</item>
        <item>Lafayette</item>
        <item>Lake Merritt</item>
        <item>MacArthur</item>
        <item>Millbrae</item>
        <item>Montgomery St.</item>
        <item>North Berkeley</item>
        <item>North Concord/Martinez</item>
        <item>Orinda</item>
        <item>Pittsburg/Bay Point</item>
        <item>Pleasant Hill/Contra Costa Centre</item>
        <item>Powell St.</item>
        <item>Richmond</item>
        <item>Rockridge</item>
        <item>San Bruno</item>
        <item>San Francisco Int\'l Airport</item>
        <item>San Leandro</item>
        <item>South Hayward</item>
        <item>South San Francisco</item>
        <item>Union City</item>
        <item>Walnut Creek</item>
        <item>West Dublin/Pleasanton</item>
        <item>West Oakland</item>
    </string-array>
    
      <string-array name="stationcodes">
        <item>12TH</item>
<item>16TH</item>
<item>19TH</item>
<item>24TH</item>
<item>ASHB</item>
<item>BALB</item>
<item>BAYF</item>
<item>CAST</item>
<item>CIVC</item>
<item>COLS</item>
<item>COLM</item>
<item>CONC</item>
<item>DALY</item>
<item>DBRK</item>
<item>DUBL</item>
<item>DELN</item>
<item>PLZA</item>
<item>EMBR</item>
<item>FRMT</item>
<item>FTVL</item>
<item>GLEN</item>
<item>HAYW</item>
<item>LAFY</item>
<item>LAKE</item>
<item>MCAR</item>
<item>MLBR</item>
<item>MONT</item>
<item>NBRK</item>
<item>NCON</item>
<item>ORIN</item>
<item>PITT</item>
<item>PHIL</item>
<item>POWL</item>
<item>RICH</item>
<item>ROCK</item>
<item>SBRN</item>
<item>SFIA</item>
<item>SANL</item>
<item>SHAY</item>
<item>SSAN</item>
<item>UCTY</item>
<item>WCRK</item>
<item>WDUB</item>
<item>WOAK</item>
    </string-array>

    <string name="title_activity_spinner">SpinnerActivity</string>
    <string name="title_activity_bart_spinner">BartSpinner</string>

</resources>