<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:orientation="vertical"  >
    
      <TextView
          android:id="@+id/from"
           android:layout_width="wrap_content"
              android:layout_height="wrap_content"
          android:text="@string/origin" />
    
    <Spinner
        android:id="@+id/origin"
         android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
    
     <TextView
         android:id="@+id/to"
          android:layout_width="wrap_content"
              android:layout_height="wrap_content"

         android:text="@string/dest" />

    <Spinner
        android:id="@+id/destination"
         android:layout_width="wrap_content"
              android:layout_height="wrap_content"

        
         />

       <Button
           android:id="@+id/timebutton"
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"
           
 
           android:onClick="TimeClickHandler"
           android:text="@string/time" />
       
       <Button
        android:id="@+id/datebutton"
       android:layout_width="wrap_content"
              android:layout_height="wrap_content"
             android:onClick= "DateClickHandler"
        
        
        android:text="@string/date" />
       
          <Button
              android:id="@+id/button1"
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"
           
              android:onClick="myClickHandler2"
              android:text="@string/hello_world" />

</LinearLayout>
